Fix progress bar broken in Android < 4.4

--- a/src/less/pages/cert.less
+++ b/src/less/pages/cert.less
@@ -12,7 +12,7 @@ progress::-webkit-progress-bar {
 
 progress::-webkit-progress-value {
   background-color: #5cb85c;
-  background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+  background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
   background-size: 40px 40px;
   border-radius: 9px;
   -webkit-animation: stripes 2s linear infinite;
@@ -25,4 +25,13 @@ progress::-webkit-progress-value {
   to {
     background-position: 0 0
   }
+}
+
+html.android progress {
+  left: 15px;
+  background-color: #5cb85c;
+  background-image: -webkit-linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+  background-size: 40px 40px;
+  border-radius: 9px;
+  -webkit-animation: stripes 2s linear infinite;
 }
